--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h1 class="logo"><a href="index.html"><img class="img" src="src/img/audit-g1ace4d155_1920.jpg"></a></h1>
+      <h1 class="logo"><a href="index.html"><img class="img" src="audit-g1ace4d155_1920.jpg"></a></h1>
       <nav>
         <input type="checkbox" id="toggle" />
         <label for="toggle">
