--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a class="menu-item-link" href="">Appartments</a>
           </li>
           <li class="menu-item">
-            <a class="menu-item-link" href="">Appartments</a>
+            <a class="menu-item-link" href="">Articles</a>
           </li>
           <li class="menu-item">
             <a class="menu-item-link" href="">Agents</a>
